# vaxicode-parser

./: .gitignore  LICENSE  README.md  arguments.py  index.html  jsonutils.py  jwtutils.py  parse.py  pdf2png.py  pyproject.toml  qrcodereader.py  requirements.txt  vaxicode-parser.js
vaxicode_parser/: vaxicode-parser.py
vaxicode_utils/: __init__.py  arguments.py  jsonutils.py  jwtutils.py  pdf2png.py  qrcodereader.py  shcutils.py
