[tool.poetry]
name = "vaxicode-parser"
version = "0.1.0"
description = "Extract SHC data from QR codes"
authors = ["Dwarf1er <SerolTech@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python-headless = "^4.9.0.80"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
